--- a/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
+++ b/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
@@ -164,7 +164,8 @@
                 [src]="
                   img.imagenUrl!.startsWith('http')
                     ? img.imagenUrl
-                    : 'https://proveedores-back-familycash.onrender.com' + img.imagenUrl
+                    : 'https://proveedores-back-familycash.onrender.com' +
+                      img.imagenUrl
                 "
                 class="d-block w-100"
                 style="
@@ -214,7 +215,12 @@
               *ngFor="let doc of oProducto.documentos"
             >
               <a
-                [href]="'https://proveedores-back-familycash.onrender.com' + doc.documentoUrl"
+                [href]="
+                  doc.documentoUrl.startsWith('http')
+                    ? doc.documentoUrl
+                    : 'https://proveedores-back-familycash.onrender.com' +
+                      doc.documentoUrl
+                "
                 target="_blank"
               >
                 {{ doc.nombreOriginal || "Documento sin nombre" }}
