--- a/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
+++ b/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
@@ -216,10 +216,10 @@
             >
               <a
                 [href]="
-                  doc.documentoUrl.startsWith('http')
+                  doc.documentoUrl.startsWith('http') ||
+                  doc.documentoUrl.startsWith('//')
                     ? doc.documentoUrl
-                    : 'https://proveedores-back-familycash.onrender.com' +
-                      doc.documentoUrl
+                    : 'https://proveedores.familycash.es' + doc.documentoUrl
                 "
                 target="_blank"
               >
