--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -281,7 +281,7 @@
               <h6 class="seccion-titulo mt-3" style="font-size: 1.25rem;">Dimensiones de la Caja</h6>
               <div class="row">
               <div class="col-md-4 mb-3">
-                <label class="form-label">Largo Caja</label>
+                <label class="form-label">Largo Caja (cm)</label>
                 <input type="number" formControlName="largo_caja" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('largo_caja')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Solo números enteros
@@ -294,7 +294,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-3">
-                <label class="form-label">Ancho Caja</label>
+                <label class="form-label">Ancho Caja (cm)</label>
                 <input type="number" formControlName="ancho_caja" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('ancho_caja')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Solo números enteros
@@ -307,7 +307,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-3">
-                <label class="form-label">Alto Caja</label>
+                <label class="form-label">Alto Caja (cm)</label>
                 <input type="number" formControlName="alto_caja" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('alto_caja')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Solo números enteros
@@ -320,7 +320,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-3">
-                <label class="form-label">Peso Caja</label>
+                <label class="form-label">Peso Caja (kg)</label>
                 <input type="number" formControlName="peso_caja" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('peso_caja')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Valor decimal válido
@@ -335,7 +335,7 @@
               <h6 class="seccion-titulo mt-3" style="font-size: 1.25rem;">Dimensiones de la Unidad</h6>
               <div class="row">
               <div class="col-md-4 mb-3">
-                <label class="form-label">Largo Unidad</label>
+                <label class="form-label">Largo Unidad (cm)</label>
                 <input type="number" formControlName="largo_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('largo_unidad')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Solo números enteros
@@ -348,7 +348,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-3">
-                <label class="form-label">Ancho Unidad</label>
+                <label class="form-label">Ancho Unidad (cm)</label>
                 <input type="number" formControlName="ancho_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('ancho_unidad')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Solo números enteros
@@ -361,7 +361,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-3">
-                <label class="form-label">Alto Unidad</label>
+                <label class="form-label">Alto Unidad (cm)</label>
                 <input type="number" formControlName="alto_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('alto_unidad')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Solo números enteros
@@ -374,7 +374,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-3">
-                <label class="form-label">Peso Neto Unidad</label>
+                <label class="form-label">Peso Neto Unidad (kg)</label>
                 <input type="number" formControlName="peso_neto_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('peso_neto_unidad')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Valor decimal válido
@@ -384,7 +384,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-3">
-                <label class="form-label">Peso Escurrido Unidad</label>
+                <label class="form-label">Peso Escurrido Unidad (kg)</label>
                 <input type="number" formControlName="peso_escurrido_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('peso_escurrido_unidad')}" />
                 <div class="invalid-feedback">
                   <i class="bi bi-exclamation-circle"></i> Valor decimal válido
